Fix comment marked marker alignment

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -1276,6 +1276,13 @@ tr.commentColorffffff div.bi-bookmark-fill {
   width: 100%;
   padding-left: 5px;
 
+  .catsHeader {
+	width: calc(100% - 1em);
+	&::part(base) {
+	  align-items:center;
+	}
+  }
+
   .et2_smallpart_comment {
 	flex-direction: column;
 	flex: 2 0 auto;
